# goose

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: bsp.rs  console.rs  cpu.rs  driver.rs  main.rs  panic_wait.rs  print.rs  synchronization.rs  time.rs
src/_arch/aarch64/: cpu.rs  time.rs
src/_arch/aarch64/cpu/: boot.s
src/_arch/riscv64/: cpu.rs
src/_arch/riscv64/cpu/: boot.rs  boot.s
src/bsp/: device_driver.rs  raspberrypi.rs
src/bsp/device_driver/: common.rs
src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs
src/bsp/raspberrypi/: console.rs  driver.rs  kernel.ld  memory.rs
src/console/: null_console.rs
tools/: _vars.sh  _vars_r64.sh  nm.sh  objdump.sh  qemu-riscv64-virt.sh  qemu.sh  strip.sh
